# OpenGLViewerForPublic

./: CMakeLists.txt  FragmentShader copy.txt  FragmentShader.txt  README.md  Sample_main.cpp  VertexShader copy.txt  VertexShader.txt  obj_fragment.cpp
GLVUI/: SceneView.cpp  SceneView.hpp
GLVWin32/: GLVController.cpp  GLVController.hpp  GLVWindow.cpp  GLVWindow.hpp
GLVgltf/: GLVCamera.cpp  GLVCamera.hpp  GLVElement.cpp  GLVElement.hpp  GLVMaterial.cpp  GLVMaterial.hpp  GLVMesh.cpp  GLVMesh.h  GLVMeshes.cpp  GLVMeshes.hpp  GLVNode.cpp  GLVNode.hpp  GLVPrimitive.cpp  GLVPrimitive.hpp  GLVScene.cpp  GLVScene.hpp  GLVTexture.cpp  GLVTexture.hpp
HutaoGLTF/glTF Embeded/: Hutao.gltf
HutaoGLTF/glTF Seperate/: Hutao.gltf
general/: MVP.cpp  MVP.hpp  loadshader.cpp  loadshader.hpp  texture.cpp  texture.hpp
general/GLVBuffer/: AbsBuffer.cpp  AbsBuffer.hpp  FrameBuffer.cpp  FrameBuffer.hpp  IndexBuffer.cpp  IndexBuffer.hpp  UniformBuffer.cpp  UniformBuffer.hpp  VertexBuffer.cpp  VertexBuffer.hpp
general/GLVFileLoad/: FileManager.cpp  FileManager.hpp  GLVFile.cpp  GLVFile.hpp  absFile.hpp
general/GLVVertexArray/: BufferLayout.hpp  VertexArray.cpp  VertexArray.hpp
include/GL/: wgl.h
source/: incls.h
source/Context/: abstract_context.hpp  imgui_context.cpp  imgui_context.hpp  render_context.cpp  render_context.hpp
source/Input/: input.hpp
source/Manager/: FileDialogManager.cpp  FileDialogManager.hpp  sysRsrcManager.cpp  sysRsrcManager.hpp
source/SceneView/: camera.cpp  camera.hpp  renderer.cpp  renderer.hpp  trackball.cpp  trackball.hpp
source/UIComponent/: Hierarchy.cpp  Hierarchy.hpp  Inspector.cpp  Inspector.hpp  Scene.cpp  Scene.hpp  absInspec.hpp
source/UV/: MatPrevRender.cpp  MatPrevRender.hpp  TexturePresampler.cpp  TexturePresampler.hpp
source/WindowManager/: WinManager.cpp  WinManager.hpp  win.hpp
source/resource/fonts/: Rubik-Regular.hpp
